--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.18MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-2.17MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-870.7KB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-881.4KB/s(Youtube:不良林), server: 38.68.134.191, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-2.92MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.68.134.191, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇫🇷 法国-988.3KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-762.2KB/s(Youtube:不良林), server: 38.68.134.191, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇯🇵 日本-2.46MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
   - {name: 🇺🇸 美国-872.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-823.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-988.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-988.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-988.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-988.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-988.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-988.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-881.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-988.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
