--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.56MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-182.1KB/s(Youtube:不良林), server: 172.99.188.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-467.9KB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-851.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-762.2KB/s(Youtube:不良林), server: 38.68.134.191, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-553.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-823.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-917.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-503.4KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-693.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇩🇪 德国-1004.5KB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-689.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.68.134.191, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇫🇷 法国-342.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-647.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 38.143.66.20, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-182.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-851.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-182.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-851.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-182.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-851.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-182.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-851.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-182.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-851.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-182.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-851.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-182.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-851.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-762.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-917.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
