--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-693.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇩🇪 德国-1004.5KB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-724.1KB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-787.4KB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-689.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.68.134.191, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇫🇷 法国-342.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-467.9KB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-647.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 38.143.66.20, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-693.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1004.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-724.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-689.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-342.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-467.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-647.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
